# cmake-example-component-lib

./: .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  Config.cmake.in  GNUmakefile  README.md  _addition_8h.html  _math_functions_8h.html  _r_e_a_d_m_e_8md.html  _square_root_8h.html  about.html  about_8dox.html  annotated.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_a5112ce1880e7704156e9f01cc44c927.html  files.html  gcovr.cfg  index.html  index.html.bak  index.include_mathfunctions_MathFunctions.h.html  index.include_mathfunctions_MathFunctions.h.html.bak  index.source_Addition_Addition.cxx.html  index.source_Addition_Addition.cxx.html.bak  index.source_MathFunctions_MathFunctions.cxx.html  index.source_MathFunctions_MathFunctions.cxx.html.bak  index.source_SquareRoot_SquareRoot.cxx.html  index.source_SquareRoot_SquareRoot.cxx.html.bak  index.standalone_source_calc.cxx.html  index.standalone_source_calc.cxx.html.bak  index.standalone_source_main.cxx.html  index.standalone_source_main.cxx.html.bak  index.test_source_main.cxx.html  mathfunctions__export_8h.html  modules.html  namespace_math_functions.html  namespaces.html  pages.html  searchdata-v1.js
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
cmake/: WarningsAsErrors.cmake  options.cmake  tools.cmake
documentation/: CMakeLists.txt
include/mathfunctions/: Addition.h  MathFunctions.h  SquareRoot.h
source/: CMakeLists.txt  MathFunctions.cxx
source/Addition/: Addition.cxx  Addition.h  CMakeLists.txt
source/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
source/SquareRoot/: CMakeLists.txt  SquareRoot.cxx  SquareRoot.h
standalone/: CMakeLists.txt
standalone/source/: calc.cxx  main.cxx
test/: CMakeLists.txt
test/source/: main.cxx
